# confpp

./: .bazelrc  BUILD.bazel  MODULE.bazel  README.md  conf++.h
.github/workflows/: test.yml
confpp/: BUILD.bazel  configuration.cpp  configuration.h  configuration.hpp  field_processor.h  field_processor.hpp
confpp/impl/: BUILD.bazel  configuration_manager.hpp  configuration_test.cpp  field_descriptor.hpp  field_descriptor_test.cpp  field_indexer.cpp  field_indexer.h  field_indexer_test.cpp  field_processor.h  field_processor_builtin.h  field_processor_builtin.hpp  field_processor_mocks.h  field_processor_mocks.hpp  field_processor_test.cpp  field_retriever.cpp  field_retriever.h  field_retriever_test.cpp
lib/: BUILD.bazel  configuration.h
tests/: BUILD.bazel  configuration_test.cpp
