package(default_visibility = ["//visibility:public"])

cc_library(
    name = "confpp",
    srcs = ["configuration.cpp"],
    hdrs = ["configuration.h"],
    deps = [
        ":field_processor",
        "//confpp/impl",
        "@fmt",
    ],
)

cc_library(
    name = "field_processor",
    hdrs = ["field_processor.h"],
)
