cc_library(
    name = "field_retriever",
    srcs = ["field_retriever.cpp"],
    hdrs = ["field_retriever.h"],
)

cc_test(
    name = "field_retriever_test",
    srcs = ["field_retriever_test.cpp"],
    deps = [
        ":field_retriever",
        "@catch2//:catch2_main",
    ],
)

test_suite(
    name = "tests",
)
