cc_library(
    name = "field_retriever",
    srcs = ["field_retriever.cpp"],
    hdrs = ["field_retriever.h"],
)

cc_test(
    name = "field_retriever_test",
    size = "small",
    srcs = ["field_retriever_test.cpp"],
    deps = [
        ":field_retriever",
        "@catch2//:catch2_main",
    ],
)

cc_library(
    name = "field_processor_interface",
    hdrs = ["field_processor.h"],
)

cc_library(
    name = "field_processor_builtin",
    srcs = ["field_processor_builtin.cpp"],
    hdrs = ["field_processor_builtin.h"],
    deps = [":field_processor_interface"],
)

cc_test(
    name = "field_processor_test",
    size = "small",
    srcs = glob(["field_processor_test.cpp"]),
    deps = [
        ":field_processor_builtin",
        "@catch2//:catch2_main",
    ],
)

test_suite(
    name = "tests",
)
