cc_library(
    name = "impl",
    visibility = ["//confpp:__pkg__"],
    deps = [
        ":field_processor_builtin",
        ":field_retriever",
    ],
)

cc_library(
    name = "field_retriever",
    srcs = ["field_retriever.cpp"],
    hdrs = ["field_retriever.h"],
)

cc_test(
    name = "field_retriever_test",
    size = "small",
    srcs = ["field_retriever_test.cpp"],
    deps = [
        ":field_retriever",
        "@catch2//:catch2_main",
    ],
)

cc_library(
    name = "field_processor_builtin",
    hdrs = ["field_processor_builtin.h"],
    deps = ["//confpp:field_processor"],
)

cc_library(
    name = "field_processor_mocks",
    testonly = True,
    hdrs = ["field_processor_mocks.h"],
    deps = ["@trompeloeil"],
)

cc_test(
    name = "field_processor_test",
    size = "small",
    srcs = ["field_processor_test.cpp"],
    deps = [
        ":field_processor_builtin",
        ":field_processor_mocks",
        "@catch2//:catch2_main",
        "@trompeloeil",
    ],
)

cc_test(
    name = "configuration_test",
    srcs = ["configuration_test.cpp"],
    deps = [
        "//confpp",
        "@catch2//:catch2_main",
        "@trompeloeil",
    ],
)

test_suite(
    name = "tests",
)
